--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	    <div id="divRefreshNote" style="margin:5px;"></div>
 	    <input id="btnRefresh" type="button" value='Refresh' />
 	    <div id="map" style="height:60vh; margin-top:5px;"></div>
+		<div id="tables"></div>
 	</div>
 </body>
 
