--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </head>
 
 <body>
-	<div id="prompt" style="visibility:visible">
-	    <div style="margin:5px;">Enter super secret password:</div>
+	<div id="prompt">
+	    <text style="margin:5px;">Enter super secret password:</text>
 	    <input id="txtPrompt" />
 	    <button id="btnPrompt">Magic</button>
 	</div>
 
-	<div id="content" style="visibility:hidden">
+	<div id="content">
 	    <div id="divRefreshNote" style="margin:5px;"></div>
 	    <input id="btnRefresh" type="button" value='Refresh' />
 	    <div id="map" style="height:60vh; margin-top:5px;"></div>
