--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div id="content">
 	    <div id="divRefreshNote" style="margin:5px;"></div>
 	    <input id="btnRefresh" type="button" value='Refresh' />
-	    <div id="map" style="height:60vh; margin-top:5px;"></div>
+	    <div id="_map" style="height:60vh; margin-top:5px;"></div>
 		<div id="tables"></div>
 	</div>
 </body>
